--- a/src/App.css
+++ b/src/App.css
@@ -1,69 +1,67 @@
-body{
-    font-family: 'Ubuntu', sans-serif;
+body {
+  font-family: "Ubuntu", sans-serif;
 }
 
-ul{
-        font-size: 14px;
-        margin-left: 80px;
-        padding:  0px;
-        display: list-item;
+ul {
+  font-size: 14px;
+  margin-left: 80px;
+  padding: 0px;
+  display: list-item;
 }
 
 .map {
-    height: 100vh;
+  height: 95vh;
 }
 
-.select-file{
-    position: absolute;
-    top : 15px;
-    width: 850px;
-    left : 55vw;
-    z-index : 1000;
-    background: #000000;
-    opacity: 0.7;
-    color: #ffffff;
-    padding : 30px;
-    border-radius: 5px;
-    /*cursor: move;*/
+.select-file {
+  position: absolute;
+  top: 15px;
+  width: 850px;
+  left: 55vw;
+  z-index: 1000;
+  background: #000000;
+  opacity: 0.7;
+  color: #ffffff;
+  padding: 30px;
+  border-radius: 5px;
+  /*cursor: move;*/
 }
 
-
-.download-geojson{
-    /*position: relative;*/
-    /*left : 25%;*/
-    border : none;
-    border-radius: 5px;
-    color: #ffffff;
-    padding: 7px;
-    cursor: pointer !important;
+.download-geojson {
+  /*position: relative;*/
+  /*left : 25%;*/
+  border: none;
+  border-radius: 5px;
+  color: #ffffff;
+  padding: 7px;
+  cursor: pointer !important;
 }
 
-
-.button-color-blue{
-    background: #003893;
+.button-color-blue {
+  background: #003893;
 }
 
-.crimson{
-    background: #dc143c;
+.crimson {
+  background: #dc143c;
 }
 
-.button-color-green{
-    background: #8e44ad;
+.button-color-green {
+  background: #8e44ad;
 }
 
-.edit-mode{
-    position: absolute;
-    top : 20px;
-    left : 38%;
-    z-index : 1000;
-    background: #c0392b;
-    opacity: 0.7;
-    color: #ffffff;
-    padding : 9px;
-    border-radius: 5px;
-    cursor: move;
+.edit-mode {
+  position: absolute;
+  top: 20px;
+  left: 38%;
+  z-index: 1000;
+  background: #c0392b;
+  opacity: 0.7;
+  color: #ffffff;
+  padding: 9px;
+  border-radius: 5px;
+  cursor: move;
 }
 
-.select *{
-    color: #2c3e50;
+.select * {
+  color: #2c3e50;
 }
